Added answer.py and answer.ipynb to the gitignore

--- a/assignment1/main.ipynb
+++ b/assignment1/main.ipynb
@@ -13,7 +13,7 @@
    "id": "6cfca1b6",
    "metadata": {},
    "source": [
-    "# Linear Regression\n"
+    "## Linear Regression\n"
    ]
   },
   {
@@ -21,7 +21,7 @@
    "id": "1bd7ff5c",
    "metadata": {},
    "source": [
-    "# Logistic Regression\n"
+    "## Logistic Regression\n"
    ]
   },
   {
@@ -29,7 +29,7 @@
    "id": "f5104360",
    "metadata": {},
    "source": [
-    "# Decision Tree\n"
+    "## Decision Tree\n"
    ]
   },
   {
@@ -37,7 +37,7 @@
    "id": "b710cfd7",
    "metadata": {},
    "source": [
-    "# Random Forest\n"
+    "## Random Forest\n"
    ]
   },
   {
@@ -45,7 +45,7 @@
    "id": "29845ace",
    "metadata": {},
    "source": [
-    "# Support Vector Machine (SVM)\n"
+    "## Support Vector Machine (SVM)\n"
    ]
   }
  ],
