Added code sections and todos to assignment1/main.ipynb.

--- a/assignment1/main.ipynb
+++ b/assignment1/main.ipynb
@@ -9,11 +9,53 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b761116c",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Packages go here"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "6cfca1b6",
    "metadata": {},
    "source": [
     "## Linear Regression\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "919df572",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Dataset for linear regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a2a73c3e",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# TODO: Implement linear regression model"
    ]
   },
   {
@@ -25,11 +67,67 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c30aaedb",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Dataset for logistic regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b225e5b",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# TODO: Implement logistic regression model"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "f5104360",
    "metadata": {},
    "source": [
     "## Decision Tree\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad75f430",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Dataset for decision tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b904887",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# TODO: Implement decision tree model"
    ]
   },
   {
@@ -41,11 +139,67 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0bf72df",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Dataset for random forest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0933951",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# TODO: Implement random forest model"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "29845ace",
    "metadata": {},
    "source": [
     "## Support Vector Machine (SVM)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18b26727",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Dataset for SVM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b01329b",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# TODO: Implement SVM model"
    ]
   }
  ],
